FIX: interface table too small

--- a/interface/pages/styles.css
+++ b/interface/pages/styles.css
@@ -74,7 +74,6 @@ header {
 #results {
   margin: 0 auto;
   width: 90%;
-  max-width: 1200px;
   background-color: #fff;
   padding: 20px;
   border-radius: 8px;
